@@ -9,6 +9,7 @@
 #include "xbox/network.h"
 #include "PartyModeManager.h"
 #include "GUIDialogMediaSource.h"
+#include "GUIWindowFileManager.h"
 
 #include "GUIImage.h"
 #include "GUIMultiImage.h"
@@ -901,4 +902,22 @@ void CGUIMediaWindow::UpdateFileList()
       }
     }
   }
+}
+
+void CGUIMediaWindow::OnDeleteItem(int iItem)
+{
+  if ( iItem < 0 || iItem >= m_vecItems.Size()) return;
+  if (!CGUIWindowFileManager::DeleteItem(m_vecItems[iItem]))
+    return;
+  Update(m_vecItems.m_strPath);
+  m_viewControl.SetSelectedItem(iItem);
+}
+
+void CGUIMediaWindow::OnRenameItem(int iItem)
+{
+  if ( iItem < 0 || iItem >= m_vecItems.Size()) return;
+  if (!CGUIWindowFileManager::RenameFile(m_vecItems[iItem]->m_strPath))
+    return;
+  Update(m_vecItems.m_strPath);
+  m_viewControl.SetSelectedItem(iItem);
 }
