@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 28-05-2006 fixed: Rename smb folders from videos/music/pictures context menus.
  - 28-05-2006 fixed: Video bookmarks were transparent.
  - 28-05-2006 changed: Moved FileZilla Server.xml to System folder.
  - 28-05-2006 added: [ 1496220 ] <previouswindow> tag to window skin files, allowing the skinner to force the previous window, thanks to lossol93.
